[developing]: added - projects endpoint; fixed - swagger
