# internal/pkg/ds/requests.go
@@ -1,0 +1,17 @@
+package ds
+
+type ChangeEmailRequest struct {
+	Email string `json:"email" binding:"required"`
+}
+
+type CreateProjectRequest struct {
+	Title       string `json:"title" binding:"required"`
+	Description string `json:"description" binding:"required"`
+	Color       string `json:"color" binding:"required"`
+}
+
+type UpdateProjectRequest struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	Color       string `json:"color"`
+}
